# kaioshin

./: .gitignore  CLAUDE.md  README.md  install.sh  kai  kaioshin  kaioshin-v1  mass  pyproject.toml
configs/: categories.yaml  sandbox.sb.template
docs/: methodology.md
kaioshin/: __init__.py  cli.py
kaioshin/knowledge/: __init__.py  malicious_extensions.yaml  risk_matrix.yaml
kaioshin/reporter/: __init__.py  markdown.py  terminal.py
kaioshin/scanner/: __init__.py  ai_agents.py  extensions.py  network.py  secrets.py  wallets.py
